# zystarsolver_project

./: .gitignore  LICENSE  MODEL_LICENSE.md  README.md  pyproject.toml  requirements.txt
ZYstarsolver/: __init__.py  artifacts.py  catalog.py  download_models.py  errors.py  models.py  predictor.py  preprocess.py
examples/: call_api.py  expected_response_10_35.json  expected_response_30_100.json  local_infer.py  sample_points_10_35.json  sample_points_30_100.json
scripts/: download_models.py
tests/: test_artifacts.py  test_download_models.py  test_examples.py  test_predictor.py  test_preprocess.py  test_public_api_and_docs.py
